--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% flash.each do |k,v| %>
+<p style="font-weight: bold; text-align:center; background-color:red">
+  <%= v %>
+</p>
+<% end %>
 <%= yield %>
 
 </body>
